# Glancy

./: .env.local.example  .gitignore  DESIGN.md  HACKATHON_DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  .gitignore  README.md  pyproject.toml  start-backend.ps1
backend/app/: __init__.py  config.py  main.py  models.py  normalize.py
backend/app/fundamental/: __init__.py  format.py  insights.py  kr.py  models.py  us.py
backend/app/indicators/: __init__.py  compute.py  momentum.py  pivot.py  signals.py  strength.py  trend.py  volatility.py  volume.py
backend/app/insights/: __init__.py  compose.py  overall.py  per_indicator.py  technical_profile.py
backend/app/reliability/: __init__.py  cache.py  fallback.py  status.py  wrappers.py
backend/app/routers/: crypto.py  etfs.py  fundamental.py  indicators.py  indices.py  kr_stocks.py  search.py  upload.py  us_stocks.py
backend/app/sample_data/: crypto_btcusdt.json  etf_spy.json  index_gspc.json  index_ks11.json  kr_005930.json  us_aapl.json
backend/app/sources/: __init__.py  binance_source.py  coingecko_source.py  kiwoom_source.py  pykrx_source.py  search_source.py  yfinance_source.py
backend/app/upload/: __init__.py  analysis.py  detector.py
backend/app/upload/adapters/: __init__.py  composite_portfolio.py  multi_asset.py  (+4 more)
backend/tests/: test_fundamental_format.py  test_fundamental_insights.py  test_health.py  test_indicators.py  test_insights.py  test_kiwoom_provider.py  test_reliability.py  test_search.py  test_timeframe_routing.py  test_upload.py
(+125 files in other folders)
